[gd_scene load_steps=6 format=3 uid="uid://ccmiwkk1lain2"]

[ext_resource type="PackedScene" uid="uid://j5h3f5fjmc22" path="res://Terrain/Trees/Meshes/PineSmall.glb" id="1_202h2"]
[ext_resource type="Script" path="res://Scripts/bush_audio_player.gd" id="2_cj5h2"]
[ext_resource type="AudioStream" uid="uid://cyvikwv6qnti4" path="res://Sound/Bush.mp3" id="3_le7uj"]
[ext_resource type="AudioStream" uid="uid://dipqxe1lrjc2s" path="res://Sound/Bush_Reverse.wav" id="4_ns8ym"]

[sub_resource type="SphereShape3D" id="SphereShape3D_revjy"]
radius = 1.13567

[node name="PineSmall" instance=ExtResource("1_202h2")]

[node name="Area3D" type="StaticBody3D" parent="." index="1"]
collision_layer = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.976313, 0)
shape = SubResource("SphereShape3D_revjy")

[node name="BushAudioPlayer" type="Node3D" parent="." index="2"]
script = ExtResource("2_cj5h2")
enter_sound = ExtResource("3_le7uj")
exit_sound = ExtResource("4_ns8ym")
bus = &"SFX"
